# auq-wizard

./: LICENSE  README.md  biome.json  deploy.sh  index.html  install.sh  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts  vitest.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/resources/integrations/claude/auq/: SKILL.md
src-tauri/resources/integrations/codex/auq/: SKILL.md
src-tauri/resources/integrations/codex/auq/agents/: openai.yaml
src-tauri/src/: broker.rs  cli.rs  database.rs  install.rs  lib.rs  main.rs  preferences.rs  protocol.rs
src/components/: Onboarding.test.tsx  Onboarding.tsx  QuestionWizard.test.tsx  QuestionWizard.tsx  ThemeToggle.test.tsx  ThemeToggle.tsx
src/components/ui/: badge.tsx  button.tsx  checkbox.tsx  field.tsx  label.tsx  progress.tsx  scroll-area.tsx  separator.tsx  textarea.tsx  tooltip.tsx
src/lib/: auq.ts  theme.ts
